Now pdf files can be easily added

--- a/bib_files/bibliography.bib
+++ b/bib_files/bibliography.bib
@@ -10,6 +10,7 @@
   month     = {Dec},
   doi       = {10.1103/PhysRevB.62.R16235},
   file      = {:/home/marini/Papers_and_Results/DATABASE/PhysRevB.62.R16235.pdf:PDF},
+  groups    = {Polymers},
   issue     = {24},
   numpages  = {0},
   publisher = {American Physical Society},
@@ -15268,4 +15269,142 @@
   url      = {http://stacks.iop.org/1367-2630/18/i},
 }
 
+@Unpublished{exc-ph2,
+  author    = {Hsiao-Yi Chen and Marco Bernardi},
+  title     = {Derivation of the Exciton-Phonon Interaction},
+  file      = {:/home/marini/Papers_and_Results/DATABASE/exc-ph2.pdf:PDF},
+  groups    = {Exciton-Phonon, Electron-Phonon, To Read},
+  timestamp = {2018.09.28},
+  volume    = {none},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
+
+@Comment{jabref-meta: grouping:
+0 AllEntriesGroup:;
+1 StaticGroup:To Read\;0\;1\;\;\;\;;
+1 StaticGroup:Aharonov-Bohm\;0\;1\;\;\;\;;
+2 StaticGroup:Optics\;0\;1\;\;\;\;;
+1 StaticGroup:Atomic dynamics\;0\;1\;\;\;\;;
+1 StaticGroup:Auger\;0\;1\;\;\;\;;
+1 StaticGroup:Books and More ...\;0\;1\;\;\;\;;
+2 StaticGroup:Books\;0\;1\;\;\;\;;
+2 StaticGroup:Notes\;0\;1\;\;\;\;;
+2 StaticGroup:Thesis\;0\;1\;\;\;\;;
+2 StaticGroup:Meetings\;0\;1\;\;\;\;;
+2 StaticGroup:Reviews\;0\;1\;\;\;\;;
+1 StaticGroup:Bose-Einstein Condensation\;0\;1\;\;\;\;;
+1 StaticGroup:Coding\;0\;1\;\;\;\;;
+1 StaticGroup:Double Excitations\;0\;1\;\;\;\;;
+1 StaticGroup:DFT\;0\;1\;\;\;\;;
+2 StaticGroup:Ultrasoft potentials\;0\;1\;\;\;\;;
+2 StaticGroup:SDFT\;0\;1\;\;\;\;;
+1 StaticGroup:Electron-Phonon\;0\;1\;\;\;\;;
+2 StaticGroup:DFPT\;0\;1\;\;\;\;;
+2 StaticGroup:Cardona\;0\;1\;\;\;\;;
+2 StaticGroup:Model Hamiltonians\;0\;1\;\;\;\;;
+2 StaticGroup:Phonons\;0\;1\;\;\;\;;
+2 StaticGroup:Oxides\;0\;1\;\;\;\;;
+2 StaticGroup:Jahn-Teller\;0\;1\;\;\;\;;
+2 StaticGroup:Franck-Condon\;0\;1\;\;\;\;;
+2 StaticGroup:Phonon assisted absorption\;0\;1\;\;\;\;;
+2 StaticGroup:Cumulant\;0\;1\;\;\;\;;
+2 StaticGroup:Coherent Phonon Modes\;0\;1\;\;\;\;;
+2 StaticGroup:Exciton-Phonon\;0\;1\;\;\;\;;
+1 StaticGroup:Hall effect\;0\;1\;\;\;\;;
+1 StaticGroup:Kerr effect\;0\;1\;\;\;\;;
+1 StaticGroup:Linear Optics\;0\;1\;\;\;\;;
+2 StaticGroup:Excitons\;0\;1\;\;\;\;;
+1 StaticGroup:MBPT\;0\;1\;\;\;\;;
+1 StaticGroup:Magnetism & Barry Phase\;0\;1\;\;\;\;;
+1 StaticGroup:Natural Orbitals\;0\;1\;\;\;\;;
+1 StaticGroup:NEGF\;0\;1\;\;\;\;;
+2 StaticGroup:Baym-Kadanoff Eqs\;0\;1\;\;\;\;;
+3 StaticGroup:2 Levels\;0\;1\;\;\;\;;
+3 StaticGroup:ERC\;0\;1\;\;\;\;;
+3 StaticGroup:El-Ph\;0\;1\;\;\;\;;
+3 StaticGroup:BKE with quantized vector potentials\;0\;1\;\;\;\;;
+3 StaticGroup:Strongly Correlated\;0\;1\;\;\;\;;
+2 StaticGroup:Bloch Equations\;0\;1\;\;\;\;;
+2 StaticGroup:Density Matrices\;0\;1\;\;\;\;;
+1 StaticGroup:Non collinear spin\;0\;1\;\;\;\;;
+1 StaticGroup:Photo Luminescence\;0\;1\;\;\;\;;
+2 StaticGroup:Radiative Recombination\;0\;1\;\;\;\;;
+1 StaticGroup:Quasiparticles\;0\;1\;\;\;\;;
+2 StaticGroup:Lifetimes\;0\;1\;\;\;\;;
+2 StaticGroup:GW\;0\;1\;\;\;\;;
+1 StaticGroup:Raman\;0\;1\;\;\;\;;
+1 StaticGroup:Self-Consistency\;0\;1\;\;\;\;;
+1 StaticGroup:SOC\;0\;1\;\;\;\;;
+1 StaticGroup:Specific Materials\;0\;1\;\;\;\;;
+2 StaticGroup:Polymers\;0\;1\;\;\;\;;
+2 StaticGroup:Graphite & Graphene\;0\;1\;\;\;\;;
+3 StaticGroup:ARPES & Polaronic effects\;0\;1\;\;\;\;;
+2 StaticGroup:Surfaces\;0\;1\;\;\;\;;
+2 StaticGroup:Bulks\;0\;1\;\;\;\;;
+2 StaticGroup:Oxides\;0\;1\;\;\;\;;
+2 StaticGroup:MgB2\;0\;1\;\;\;\;;
+2 StaticGroup:GaN\;0\;1\;\;\;\;;
+2 StaticGroup:Diamondoids\;0\;1\;\;\;\;;
+2 StaticGroup:Dichalcogenides\;0\;1\;\;\;\;;
+2 StaticGroup:MgO\;0\;1\;\;\;\;;
+2 StaticGroup:hBN\;0\;1\;\;\;\;;
+2 StaticGroup:Carbon Nanotubes\;0\;1\;\;\;\;;
+2 StaticGroup:Silicon\;0\;1\;\;\;\;;
+2 StaticGroup:Jellium\;0\;1\;\;\;\;;
+2 StaticGroup:GaAs\;0\;1\;\;\;\;;
+2 StaticGroup:ZnO\;0\;1\;\;\;\;;
+2 StaticGroup:NanoTubes\;0\;1\;\;\;\;;
+2 StaticGroup:Polymers\;0\;1\;\;\;\;;
+2 StaticGroup:phenylalanine\;0\;1\;\;\;\;;
+2 StaticGroup:FeRh\;0\;1\;\;\;\;;
+2 StaticGroup:Black Phosporus\;0\;1\;\;\;\;;
+2 StaticGroup:C60\;0\;1\;\;\;\;;
+1 StaticGroup:Strongly correlated\;0\;1\;\;\;\;;
+1 StaticGroup:Superconductivity\;0\;1\;\;\;\;;
+1 StaticGroup:Time-Resolved Phenomena\;0\;1\;\;\;\;;
+2 StaticGroup:Atto Chemistry\;0\;1\;\;\;\;;
+2 StaticGroup:Femto Chemistry\;0\;1\;\;\;\;;
+2 StaticGroup:Absorption under Pump\;0\;1\;\;\;\;;
+3 StaticGroup:SHG\;0\;1\;\;\;\;;
+3 StaticGroup:Gauge\;0\;1\;\;\;\;;
+3 StaticGroup:EIT\;0\;1\;\;\;\;;
+3 StaticGroup:HHG\;0\;1\;\;\;\;;
+2 StaticGroup:Band gap renormalization\;0\;1\;\;\;\;;
+2 StaticGroup:Screening build-up\;0\;1\;\;\;\;;
+2 StaticGroup:Two Temperatures Model\;0\;1\;\;\;\;;
+2 StaticGroup:Time-resolved relaxation\;0\;1\;\;\;\;;
+2 StaticGroup:Intra-inter dipole m.e.\;0\;1\;\;\;\;;
+2 StaticGroup:Optical Gain\;0\;1\;\;\;\;;
+2 StaticGroup:Circularly polarized light\;0\;1\;\;\;\;;
+2 StaticGroup:Radiative Recombination\;0\;1\;\;\;\;;
+2 StaticGroup:Atomic and molecular systems\;0\;1\;\;\;\;;
+2 StaticGroup:TR ARPES\;0\;1\;\;\;\;;
+2 StaticGroup:Spin Dynamics\;0\;1\;\;\;\;;
+2 StaticGroup:Coherent Oscillations\;0\;1\;\;\;\;;
+1 StaticGroup:TDDFT\;0\;1\;\;\;\;;
+2 StaticGroup:TDPropagation\;0\;1\;\;\;\;;
+3 StaticGroup:numerics\;0\;1\;\;\;\;;
+3 StaticGroup:ModelSystems\;0\;1\;\;\;\;;
+4 StaticGroup:2elSystems\;0\;1\;\;\;\;;
+5 StaticGroup:Performance_Approximations\;0\;1\;\;\;\;;
+5 StaticGroup:Exact\;0\;1\;\;\;\;;
+5 StaticGroup:Exact_vs_Adiabatic\;0\;1\;\;\;\;;
+4 StaticGroup:elGas\;0\;1\;\;\;\;;
+3 StaticGroup:Failures\;0\;1\;\;\;\;;
+3 StaticGroup:BeyondAdiabatic\;0\;1\;\;\;\;;
+3 StaticGroup:Theory\;0\;1\;\;\;\;;
+3 StaticGroup:Review\;0\;1\;\;\;\;;
+3 StaticGroup:DampingOfcollectiveModes\;0\;1\;\;\;\;;
+3 StaticGroup:ChargeTransfer\;0\;1\;\;\;\;;
+3 StaticGroup:BSE kernels\;0\;1\;\;\;\;;
+3 StaticGroup:OEP\;0\;1\;\;\;\;;
+1 StaticGroup:QED\;0\;1\;\;\;\;;
+2 StaticGroup:Lamb\;0\;1\;\;\;\;;
+2 StaticGroup:Casimir\;0\;1\;\;\;\;;
+1 StaticGroup:Total Energy\;0\;1\;\;\;\;;
+1 StaticGroup:Transport\;0\;1\;\;\;\;;
+2 StaticGroup:Graphene & Graphite\;0\;1\;\;\;\;;
+2 StaticGroup:CNT\;0\;1\;\;\;\;;
+2 StaticGroup:Polymers\;0\;1\;\;\;\;;
+}
