--- a/bib_files/press.bib
+++ b/bib_files/press.bib
@@ -3,8 +3,8 @@
 @Misc{rassegna,
   author    = {UNHCR},
   title     = {Dopo approvazione CDM decreto Salvini},
-  file      = {:/home/marini/Papers_and_Results/DATABASE/rassegna.pdf:PDF},
-  groups    = {UNHCR},
+  file      = {:/home/marini/Desktop/Domande-Documenti/Personal/Letture/DATABASE/rassegna.pdf:PDF},
+  groups    = {UNHCR, To Read},
   timestamp = {2018.09.28},
   volume    = {none},
 }
@@ -13,5 +13,6 @@
 
 @Comment{jabref-meta: grouping:
 0 AllEntriesGroup:;
+1 StaticGroup:To Read\;0\;1\;\;\;\;;
 1 StaticGroup:UNHCR\;0\;1\;\;\;\;;
 }
